# tactile_graphics

./: .gitignore  Cargo.lock.bak  Cargo.toml  README.md  index.html  style.css
assets/: OrbitControls.js  STLLoader.js  wrappers.js
src/: constants.rs  earcut.rs  edge.rs  edge_collection.rs  json.rs  lib.rs  main.rs  ribbon.rs  stl.rs  tree.rs  triangle.rs  util.rs  vert.rs
src/components/: app.rs  constants.rs  external.rs  image.rs  mod.rs  number_input.rs  stl.rs  store.rs  threshold.rs  utils.rs
test_data/: edge_contains_broken_child.json  edge_contains_broken_parent.json
