[package]
name = "bit-to-stl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

yew = "0.19.3"
gloo-file = "0.2"
js-sys = "0.3"
web-sys = "0.3"
futures = "0.3"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2"
log = "0.4.6"
base64 = "0.13"
photon-rs = "0.3.0"

#preformance stuff
[dependencies.chrono]
version = "0.4"
features = ["wasmbind"]

[dependencies.image]
version = "0.24.0"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

